# fast-window

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/ai-draw/: fw-app.package.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/ai-knowledge-center/: CHANGELOG.md  README.md  fw-app.package.json  index.html  package.json  vite.config.ts
apps/ai-once/: CHANGELOG.md  README.md  fw-app.package.json  index.html  package.json  vite.config.ts
apps/ai-studio/: .gitignore  fw-app.package.json  package.json  tsconfig.json  vite.config.ts
apps/bookmarks/: .gitignore  fw-app.package.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/bookmarks/src-tauri/: Cargo.toml  build.rs  tauri.conf.dev.json  tauri.conf.json
apps/bookmarks/src-tauri/capabilities/: default.json
apps/bookmarks/src-tauri/icons/: icon.icns
apps/bookmarks/src-tauri/src/: backend_sidecar.rs  control_server.rs  data_dir.rs  fw_window.rs  main.rs  single_instance.rs  standalone_tray.rs
apps/clipboard-history/: .gitignore  fw-app.package.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/clipboard-history/backend-rs/: Cargo.toml
apps/clipboard-history/backend-rs/src/: clipboard.rs  data_contract.rs  domain.rs  file_clipboard.rs  http_util.rs  image_codec.rs  image_http.rs  image_store.rs  legacy_import.rs  main.rs  migrations.rs  model.rs  server.rs  service.rs  store.rs
apps/clipboard-history/src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
apps/clipboard-history/src-tauri/capabilities/: default.json
apps/clipboard-history/src-tauri/icons/: icon.icns
apps/clipboard-history/src-tauri/src/: backend_sidecar.rs  control_server.rs  data_dir.rs  fw_window.rs  main.rs  shutdown.rs  single_instance.rs
apps/eucli-studio/: index.html  package.json
apps/everything/: .gitignore  README.md  fw-app.package.json  index.html  package.json  vite.config.ts
apps/folders/: README.md  fw-app.package.json  index.html  package.json
apps/folders/src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
apps/folders/src-tauri/capabilities/: default.json
apps/folders/src-tauri/icons/: icon.icns
apps/folders/src-tauri/src/: backend_control_client.rs  backend_sidecar.rs  control_http_client.rs  control_server.rs  data_dir.rs  main.rs  path_target.rs  single_instance.rs  system_icon.rs
apps/hypercortex/: CHANGELOG.md  README.md  fw-app.package.json  index.html  package.json  vite.config.ts
apps/quick-bar/: CHANGELOG.md  README.md  fw-app.package.json  index.html  package.json  vite.config.ts
apps/quick-bar/src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
apps/quick-bar/src-tauri/capabilities/: default.json
apps/quick-bar/src-tauri/icons/: icon.icns
apps/quick-bar/src-tauri/src/: app_layout.rs  backend_lifecycle.rs  backend_sidecar.rs  control_server.rs  data_dir.rs  fw_window.rs  host_capability.rs  main.rs  quick_bar_backend.rs  result_window_preferences.rs  selection_capture.rs  selection_observer.rs  shortcut.rs  single_instance.rs  toolbar_display.rs  toolbar_window.rs
apps/quick-bar/src-tauri/src/quick_bar_backend/: host_capability.rs  registry.rs
apps/task-manager/: CHANGELOG.md  README.md  fw-app.package.json  index.html  package.json  vite.config.ts
apps/v5-reference-app-go/: README.md  fw-app.package.json  package.json  vite.config.ts
docs/: plugins.md  tauri-proxy-gateway.md
plugins/ai-api-debugger/: index.js  (+1 more)
plugins/clipboard-history/backend-rs/: Cargo.toml
plugins/clipboard-history/backend-rs/src/: clipboard.rs  image_store.rs  main.rs  model.rs  server.rs  service.rs  store.rs
scripts/: build-host-msi.mjs  bump-host-version.mjs  bump-v5-app-version.mjs  dev-all.mjs  generate-v5-app-icons.mjs  host-tauri-build-policy.test.mjs  package-v5-app.mjs  plugins.mjs  prepare-tauri-resources.mjs  publish-host-msi-to-download.mjs  publish-host-msi.mjs  publish-plugin-to-download.mjs  publish-plugin.mjs  publish-v5-app-to-download.mjs  release-v5-app.mjs  stage-v5-app.mjs  sync-v5-app-exe.mjs  tauri.mjs  unpublish-v5-app-from-download.mjs  v5-app-packaging.test.mjs  verify-v5-app-package.mjs
src/: App.tsx  PluginCard.tsx  PluginContextMenu.tsx  PluginDetailDialog.tsx  PluginListView.tsx  PluginUninstallDialog.tsx  TitleBar.tsx  constants.ts  hostProfile.ts  iconImageInput.ts  main.tsx  shortcutActivationGuard.ts  shortcuts.ts  styles.css  theme.ts  usePlugins.ts  useSearch.ts  useWallpaper.ts  utils.ts  vite-env.d.ts  wallpaper.ts
src-tauri/: .taurignore  Cargo.toml  tauri.conf.dev.json  tauri.conf.json  tauri.fast.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/runtimes/: README.md
src-tauri/src/: app.rs  app_autostart.rs  app_capabilities.rs  app_dev_actions.rs  app_installer.rs  app_launcher.rs  app_layout.rs  app_registry.rs  app_shortcuts.rs  auto_start.rs  browser_stack.rs  capability_server.rs  clipboard.rs  clipboard_snapshot.rs  clipboard_watch.rs  config_store.rs  core.rs  dev_terminal.rs  host_dev_actions.rs  host_dialog.rs  host_lifecycle.rs  host_primitives.rs  host_updater.rs  http_api.rs  install_fs.rs  json_file.rs  main.rs  os_actions.rs  plugin_assets.rs  plugin_backend_commands.rs  plugin_backend_endpoint.rs  plugin_backend_ipc.rs  plugin_backend_runtime.rs  plugin_backend_runtimes.rs  plugin_backend_state.rs  plugin_files.rs  plugin_files_delete_tree.rs  plugin_uninstall.rs  plugins.rs  process_commands.rs  (+7 more)
src-tauri/src/app_lifecycle/: control_channel.rs  manager.rs  mod.rs  process_owner.rs
src-tauri/src/capability_server/: capability_service.rs  http_transport.rs
src-tauri/src/migrations/: m001_flat_json_to_storage_json.rs  m002_storage_json_to_kv.rs  m003_host_files_into_app_dir.rs  mod.rs
src-tauri/src/tasks/: api.rs  executor.rs  mod.rs  model.rs  state.rs  util.rs
src-tauri/src/tasks/kinds/: clipboard_watch.rs  http_request.rs  mod.rs
src-tauri/src/workspace/: mod.rs  open.rs  paths.rs  scope.rs  v2_files.rs  writable.rs
(+1259 files in other folders)
