[package]
name = "clipboard-history-backend"
version = "1.0.2"
edition = "2021"

[dependencies]
arboard = "3.4"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tungstenite = "0.24"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_UI_Shell",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
