[package]
name = "quick-bar"
version = "0.1.2"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-global-shortcut = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["process", "io-util", "time", "macros", "sync"] }
rfd = "0.14"
getrandom = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
time = { version = "0.3", features = ["formatting"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
